--- a/config-dept.yaml
+++ b/config-dept.yaml
@@ -10,9 +10,9 @@ mybatis:
     mapper-locations: classpath:mybatis/mapper/*.xml
 
 spring:
+    profiles: dev
     application:
-    profiles: test
-        name: springcloud-provider-dept   #三个服务名称一致是前提
+        name: springcloud-config-dept-dev
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: org.gjt.mm.mysql.Driver
@@ -41,9 +41,9 @@ mybatis:
     mapper-locations: classpath:mybatis/mapper/*.xml
 
 spring:
-    application:
     profiles: dev
-        name: springcloud-provider-dept   #三个服务名称一致是前提
+    application:
+        name: springcloud-config-dept-dev
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: org.gjt.mm.mysql.Driver
